--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 "textbypass":"Bypass Ant Fechamentos",
 
-"textdesban":"Desbanir Contas Pelo ID (Corrigido na V23) sairá hoje",
+"textdesban":"Desbanir Contas Pelo ID Corrigido",
 
 "linkpainel":"https://jatodosmods.com/minha-conta",
 
