--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
 
 "texto18":"Corrigir Error Desbanir Por ID",
 
+"toast_upd":"Muitas tentativas em um curto espaço do tempo, tente novamente em alguns minutos",
+
 "texto19":"Em casos raros acontecia um error ao tentar desbanir em alguns Android, com essa nova opção você corrige o problema.",
 
 "texto20":"Corrigindo o problema...",
