--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 "textbypass":"Bypass Ant Fechamentos",
 
-"textdesban":"Desbanir Contas Pelo ID Corrigido (Nova atualização sairá em breve com uma nova correção)",
+"textdesban":"Desbanir Contas Pelo ID Corrigido",
 
 "linkpainel":"https://jatodosmods.com/minha-conta",
 
@@ -97,7 +97,7 @@
 
 "texto17":"Em alguns celulares causava um erro ao tentar injetar o FFH4X, com essa opção será corrigido.",
 
-"texto18":"Corrigir Error Desbanir Por ID",
+"texto18":"Corrigir Error Desbanir Por ID (Nova atualização sairá em breve com uma nova correção)",
 
 "toast_upd":"Muitas tentativas em um curto espaço de tempo, tente novamente em alguns minutos",
 
