--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
 
 "texto17":"Em alguns celulares causava um erro ao tentar injetar o FFH4X, com essa opção será corrigido.",
 
-"texto18":"Corrigir Error Desbanir Por ID (Nova atualização sairá em breve com uma nova correção)",
+"texto18":"Corrigir Error Desbanir Por ID",
 
 "toast_upd":"Muitas tentativas em um curto espaço de tempo, tente novamente em alguns minutos",
 
-"texto19":"Em casos raros acontecia um error ao tentar desbanir em alguns Android, com essa nova opção você corrige o problema.",
+"texto19":"Em casos raros acontecia um error ao tentar desbanir em alguns Android, com essa nova opção você corrige o problema.\n(Nova atualização sairá em breve com uma nova correção)",
 
 "texto20":"Corrigindo o problema...",
 
