--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 [
 {
 
-"update":"on",
+"update":"ono",
 
 "text1":"FFH4X Pro",
 
@@ -25,7 +25,7 @@
 
 "titleversao":"Nova versão",
 
-"msgversao":"Uma nova versão está disponível, com novas opções. verifique o site",
+"msgversao":"Uma nova versão está disponível, com novas opções. verifique o site\n\nAdicionado BOT de travamentos em partidas utilizando ID, Funciona via VPN Sem root.",
 
 "okupdate":"Atualizar",
 
